--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,24 @@
-@media screen and (max-width: 376px) {
   .phoneImage {
     margin: 30px 0;
     width: 375px;
     align-items: center;
+  }
+
+
+@media screen and (min-width: 1000px)  {
+  .infoVid {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .infoImg {
+    display: grid;
+    align-items: center;
+    margin: 0 3em 2em;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+  }
+  .phoneImage {
+    width: 500px;
+    margin: 0 auto;
   }
 }
