--- a/src/components/InfoCard.scss
+++ b/src/components/InfoCard.scss
@@ -1,4 +1,3 @@
-@media screen and (max-width: 376px) {
   .info {
     margin: 0 auto;
     text-align: center;
@@ -26,4 +25,18 @@
       font-weight: bold;
     }
   }
+
+@media screen and (min-width: 1000px)  {
+  .info {
+    margin: 3em;
+    text-align: left;
+    width: 50%;
+    align-items: center;
+    &__copy {
+      margin: 2em 0;
+      width: 100%;
+
+    }  
+  }
 }
+
