--- a/src/components/MainButton.scss
+++ b/src/components/MainButton.scss
@@ -1,4 +1,3 @@
-@media screen and (max-width: 376px)  {
   .mainButton  {
     align-items: center;
     display: flex;
@@ -35,4 +34,12 @@
       font-size: 15px;
     }
   }
-}
+
+  @media screen and (min-width: 1000px)  {
+    .mainButton {
+      margin: 2em 1em 0 0;
+      &__wrap{}
+    }
+    
+  
+  }
