--- a/src/components/VideoCard.scss
+++ b/src/components/VideoCard.scss
@@ -1,4 +1,3 @@
-@media screen and (max-width: 376px)  {
   .vidCard {
     background-image: url(./player.png);
     background-repeat: no-repeat;
@@ -18,4 +17,23 @@
       right: 5%;
     }
   }
-}
+
+  @media screen and (min-width: 1000px)  {
+    .vidCard {
+      margin: 0;
+      text-align: left;
+      width: 50%;
+      height: 500px;
+      &__image {
+        position: absolute;
+        top: 25%;
+        left: 22.5%;
+        z-index: 100;
+      }
+      &__video {
+        position: absolute;
+        bottom: 25%;
+        right: 22.5%;
+      }
+    }
+  }
