--- a/src/components/Sports.scss
+++ b/src/components/Sports.scss
@@ -42,6 +42,7 @@
 
 @media screen and (min-width: 1000px)  {
   .sports {
+    margin-top: 50px;
     &__images {
       display: flex;
       justify-content: center;
