--- a/src/components/Users.scss
+++ b/src/components/Users.scss
@@ -13,13 +13,17 @@
     align-items: center;
     width: 100%;
   }
-  &__twitter {
-  }
   &__user {
     margin-right: 10px;
   }
   &__content {
     font-size: 14px;
     color: #4F4F4F;
+  }
+}
+
+@media screen and (min-width: 1000px)  {
+  .users{
+    margin: 50px 0 10px;
   }
 }
